@@ -3,6 +3,10 @@ $Id$
 
 v0.91.12	24-Sep-2007
 
+	mbsebbs:
+		Added missing check to see if a user is allowed to post or
+		reply a message.
+
 
 v0.91.11	02-Sep-2007 - 24-Sep-2007
 
